# soap-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
derive/: Cargo.toml
derive/src/: attr.rs  data.rs  field.rs  lib.rs
lib/: Cargo.toml
lib/src/: display.rs  envelope.rs  error.rs  lib.rs
