[package]
name = "soap-rs-derive"
version = "0.2.0"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]
edition = "2021"
repository = "https://github.com/svmnotn/soap-rs"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
