[package]
name = "soap-rs"
version = "0.2.2"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]
edition = "2018"
repository = "https://github.com/svmnotn/soap-rs"
license = "Apache-2.0 OR MIT"

[features]
default = ["derive"]
derive = ["soap-rs-derive"]

[dependencies]
reqwest = {version = "0.10", features = ["blocking"]}
minidom = "0.12"
soap-rs-derive = { path = "../derive", optional = true }
