[package]
name = "soap-rs"
version = "0.3.1"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]
edition = "2021"
repository = "https://github.com/svmnotn/soap-rs"
license = "Apache-2.0 OR MIT"

[features]
default = ["derive"]
derive = ["soap-rs-derive"]

[dependencies]
reqwest = {version = "0.11", features = ["native-tls", "trust-dns"]}
minidom = "0.15"
soap-rs-derive = { path = "../derive", optional = true }
